; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tools/tests/personas/extr_persona_mgr.c_persona_op_create.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tools/tests/personas/extr_persona_mgr.c_persona_op_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kpersona_info = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"Creating persona...\00", align 1
@PERSONA_INFO_V1 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"Created persona %d:\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"kpersona_alloc return %d (errno:%d)\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kpersona_info*)* @persona_op_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @persona_op_create(%struct.kpersona_info* %0) #0 {
  %2 = alloca %struct.kpersona_info*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.kpersona_info* %0, %struct.kpersona_info** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %6 = load i32, i32* @PERSONA_INFO_V1, align 4
  %7 = load %struct.kpersona_info*, %struct.kpersona_info** %2, align 8
  %8 = getelementptr inbounds %struct.kpersona_info, %struct.kpersona_info* %7, i32 0, i32 0
  store i32 %6, i32* %8, align 4
  %9 = load %struct.kpersona_info*, %struct.kpersona_info** %2, align 8
  %10 = call i32 @kpersona_alloc(%struct.kpersona_info* %9, i32* %4)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  %15 = call i32 (i8*, ...) @info(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = load %struct.kpersona_info*, %struct.kpersona_info** %2, align 8
  %17 = call i32 @dump_kpersona(i32* null, %struct.kpersona_info* %16)
  br label %22

18:                                               ; preds = %1
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @errno, align 4
  %21 = call i32 @err(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i32 %19, i32 %20)
  br label %22

22:                                               ; preds = %18, %13
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @info(i8*, ...) #1

declare dso_local i32 @kpersona_alloc(%struct.kpersona_info*, i32*) #1

declare dso_local i32 @dump_kpersona(i32*, %struct.kpersona_info*) #1

declare dso_local i32 @err(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
